--- a/apis/Infrastructure.Configuration.Api/Properties/launchSettings.json
+++ b/apis/Infrastructure.Configuration.Api/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Infrastructure.Configuration.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
