--- a/apis/Infrastructure.Configuration.Api/appsettings.json
+++ b/apis/Infrastructure.Configuration.Api/appsettings.json
@@ -10,6 +10,10 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ConfigurationDb"
   },
-  "Region": "us-east-1"
+  "Region": "us-east-1",
+  "OpenTelemetry": {
+    "OtlpEndpoint": "http://otel-collector:4317",
+    "OtlpHeaders": ""
+  }
 }
 
